# tensornet

./: .bazelrc  .bumpversion.cfg  .clang-format  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamlfmt.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE-HEADER  README.md  WORKSPACE  cmake-build  configure.sh  manager  pixiw  pyproject.toml  setup-tn-tools.py  setup.py  tf_gen_op_wrapper.py
.github/workflows/: python.yml  tensornet-tools.yml
.pixi/: rc.sh
cmake/: AddModulePath.cmake  DebugUtils.cmake  FindProtobuf.cmake  FindTensorflow.cmake  IncludeWithWatch.cmake  PrintPythonModule.cmake  find-protobuf.py  find-tensorflow.py
config/: tn_build.yaml
core/: BUILD
core/kernels/: bn_table_ops.cc  bn_table_ops_dummy.cc  dense_table_ops.cc  dense_table_ops_dummy.cc  resource_var_wrapper.h  sparse_table_ops.cc  sparse_table_ops_dummy.cc
core/kernels/data/: balance_dataset_ops.cc  balance_dataset_ops.h  balance_dataset_ops_dummy.cc  balance_dataset_ops_dummy.h
core/main/: py_wrapper.cc
core/ops/: balance_dataset_ops.cc  bn_table_ops.cc  dense_table_ops.cc  sparse_table_ops.cc
core/protobuf/: ps_server.proto
core/ps/: ps_cluster.cc  ps_cluster.h  ps_local_server.cc  ps_local_server.h  ps_remote_server.cc  ps_remote_server.h  ps_server_interface.h  ps_service_impl.cc  ps_service_impl.h
core/ps/optimizer/: ada_grad_kernel.cc  ada_grad_kernel.h  adam_kernel.cc  adam_kernel.h  data_struct.cc  data_struct.h  ftrl_kernel.cc  ftrl_kernel.h  optimizer.cc  optimizer.h  optimizer_kernel.h
core/ps/table/: bn_table.cc  bn_table.h  dense_table.cc  dense_table.h  sparse_table.cc  sparse_table.h
core/ps_interface/: BUILD  ps_raw_interface.h  ps_server.proto
core/public/: version.h
core/tools/: dual_dict.h  emb_converter.cc  gen_graph.py  graph.cc  graph_base.h  graph_cc_generator.sh  object_pool.h  parse_params.py  wide_deep_graph.cc  wide_deep_graph_set.cc  xla_compile.sh
core/utility/: BUILD  allocator.h  blocking_queue.h  file_io.cc  file_io.h  fix_redef.h  mpi_manager.cc  mpi_manager.h  net_util.cc  net_util.h  random.h  semaphore.h
doc/: compile_deploy.md  dev_planning.md
doc/tutorial/: 01-begin-with-wide-deep.ipynb  02-run-in-cluster.ipynb  03-split-to-sub-graph.ipynb  04-deploy-tf-graph-online.ipynb  05-export-feature-embedding.ipynb  05-export-sparse-feature-embedding.ipynb
examples/: .gitignore  gen_example_data.py  integration-test.py  main.py  wide_deep.py
examples/common/: config.py  feature_column.py  layers.py  util.py
examples/models/: deep_cross.py  deepfm.py  wide_deep.py
examples/online_serving/: .gitignore  BUILD  emb_converter_reduce.py  gen_graph.py  graph.cc  graph_cc_generator.sh  main.cc  random.h
examples/online_serving/test_env/: .gitignore
examples/online_serving/test_env/data/: feature.data
tensornet/: __init__.py  _opentelemetry.py  version.py
tensornet-tools/config/: tn_tool_env.yaml
tensornet-tools/python/: merge_extra_embedding.py  merge_sparse.py  utils.py
tensornet/callbacks/: __init__.py  callbacks.py
tensornet/core/: .gitignore  __init__.py  gen_balance_dataset_ops.py  gen_bn_table_ops.py  gen_dense_table_ops.py  gen_sparse_table_ops.py
tensornet/data/: __init__.py  dataset.py
tensornet/distribute/: __init__.py  ps_strategy.py
tensornet/feature_column/: __init__.py  category_column.py  sequence_category_column.py
tensornet/layers/: __init__.py  embedding_features.py  normalization_layer.py  position_mapping.py  sequence_embedding_features.py
tensornet/metric/: __init__.py  metrics.py
tensornet/model/: Model.py  __init__.py  compile_utils.py
tensornet/optimizer/: __init__.py  optimizer.py
tensornet_tools/: README.md  pyproject.toml
tensornet_tools/config/: tn_tool_env.yaml
tensornet_tools/python/: merge_extra_embedding.py  merge_sparse.py  resize_dense.py  resize_sparse.py  utils.py
test/: CMakeLists.txt
test/ps/optimizer/: BUILD  optimizer_kernel_test.cc
test/ps/table/: BUILD  sparse_table_test.cc
test/utility/: BUILD  allocator_test.cc
tools/: .gitignore  install-dependencies.sh  package.sh
tools/merge_sparse/: README.md  merge_sparse.py  utils.py
tools/table_tools/: README.md  resize_dense.py  resize_sparse.py  utils.py
tools/table_tools/config/: tn_tool_env.yaml
